--- a/pom.xml
+++ b/pom.xml
@@ -17,16 +17,15 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-        <jacoco.version>0.6.3.201306030806</jacoco.version>
+        <maven-core.version>3.0</maven-core.version>
+        <maven-reporting.version>2.2</maven-reporting.version>
 
-        <maven-annotations.version>3.2</maven-annotations.version>
-        <maven-core.version>3.1.0</maven-core.version>
-        <maven-reporting-api.version>3.0</maven-reporting-api.version>
-        <maven-reporting-impl.version>2.2</maven-reporting-impl.version>
+        <jacoco.version>0.6.3.201306030806</jacoco.version>
+        <commons-lang3.version>3.1</commons-lang3.version>
     </properties>
 
     <prerequisites>
-        <maven>3.0</maven>
+        <maven>${maven-core.version}</maven>
     </prerequisites>
 
     <build>
@@ -34,7 +33,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-plugin-plugin</artifactId>
-                <version>${maven-annotations.version}</version>
+                <version>${maven-core.version}</version>
                 <configuration>
                     <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
                 </configuration>
@@ -59,8 +58,8 @@
     <dependencies>
         <dependency>
             <groupId>org.apache.maven.plugin-tools</groupId>
-            <version>${maven-annotations.version}</version>
             <artifactId>maven-plugin-annotations</artifactId>
+            <version>${maven-core.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.maven</groupId>
@@ -70,25 +69,14 @@
         <dependency>
             <groupId>org.apache.maven.reporting</groupId>
             <artifactId>maven-reporting-api</artifactId>
-            <version>${maven-reporting-api.version}</version>
+            <version>${maven-core.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.maven.reporting</groupId>
-            <artifactId>maven-reporting-impl</artifactId>
-            <version>${maven-reporting-impl.version}</version>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-compat</artifactId>
+            <version>${maven-core.version}</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.jacoco</groupId>
-            <artifactId>org.jacoco.agent</artifactId>
-            <version>${jacoco.version}</version>
-            <classifier>runtime</classifier>
-        </dependency>
-        <dependency>
-            <groupId>org.jacoco</groupId>
-            <artifactId>org.jacoco.core</artifactId>
-            <version>${jacoco.version}</version>
-        </dependency>
         <dependency>
             <groupId>org.jacoco</groupId>
             <artifactId>org.jacoco.report</artifactId>
@@ -98,6 +86,28 @@
             <groupId>org.jacoco</groupId>
             <artifactId>jacoco-maven-plugin</artifactId>
             <version>${jacoco.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.maven</groupId>
+                    <artifactId>maven-project</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.maven.reporting</groupId>
+                    <artifactId>maven-reporting-impl</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.maven.reporting</groupId>
+            <artifactId>maven-reporting-impl</artifactId>
+            <version>${maven-reporting.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons-lang3.version}</version>
         </dependency>
     </dependencies>
 </project>
