--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-        <maven-core.version>3.0</maven-core.version>
+        <maven-api.version>3.0</maven-api.version>
+        <maven-core.version>3.0.5</maven-core.version>
         <maven-reporting.version>2.2</maven-reporting.version>
 
         <jacoco.version>0.6.3.201306030806</jacoco.version>
@@ -25,7 +26,7 @@
     </properties>
 
     <prerequisites>
-        <maven>${maven-core.version}</maven>
+        <maven>${maven-api.version}</maven>
     </prerequisites>
 
     <build>
@@ -33,7 +34,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-plugin-plugin</artifactId>
-                <version>${maven-core.version}</version>
+                <version>3.1</version>
                 <configuration>
                     <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
                 </configuration>
@@ -59,7 +60,7 @@
         <dependency>
             <groupId>org.apache.maven.plugin-tools</groupId>
             <artifactId>maven-plugin-annotations</artifactId>
-            <version>${maven-core.version}</version>
+            <version>${maven-api.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.maven</groupId>
@@ -69,12 +70,12 @@
         <dependency>
             <groupId>org.apache.maven.reporting</groupId>
             <artifactId>maven-reporting-api</artifactId>
-            <version>${maven-core.version}</version>
+            <version>${maven-api.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-compat</artifactId>
-            <version>${maven-core.version}</version>
+            <version>${maven-api.version}</version>
         </dependency>
 
         <dependency>
