--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,14 @@
                     <connectionUrl>${project.scm.connection}</connectionUrl>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration combine.self="append">
+                    <target>1.7</target>
+                    <source>1.7</source>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-plugin-plugin</artifactId>
