--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>org.no-hope</groupId>
     <artifactId>jacoco-aggregator-maven-plugin</artifactId>
-    <version>0.3-SNAPSHOT</version>
+    <version>0.3</version>
     <packaging>maven-plugin</packaging>
 
     <licenses>
